--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="https://img.icons8.com/fluent/26/000000/delete-sign.png" class="go_back" />
         </div>
         <ul>
-            <li><a href="#">About</a></li>
+            <li><a href="#ame">About</a></li>
             <li><a href="skills.html#">Skills</a></li>
             <li><a href="exp.html#">Projects</a></li>
             <li><a href="#">Work</a></li>
@@ -69,7 +69,7 @@
     <header>
         <a href="#" class="logo">Deepak</a>
         <ul>
-            <li><a href="#">About   /</a></li>
+            <li><a href="#ame">About   /</a></li>
             <li><a href="skills.html#">Skills   /</a></li>
             <li><a href="exp.html#">Projects   /</a></li>
             <li><a href="#">Work   /</a></li>
@@ -157,7 +157,7 @@
         <div class="page_2">
 
 
-            <div class="about">
+            <div class="about" id="ame">
                 <h2 class="aboutme">
                     About Me
                 </h2>
@@ -378,6 +378,8 @@
             })
         }
     </script>
+<!--                   scroll to about me                -->
+
 </body>
 
 </html>
